--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,8 +6,8 @@
     align-items: center;
     justify-content: space-between;
     z-index: 1;
-    margin: 49px 10% 0;
-    text-align: center;
+    margin: 49px 10% 0 10%;
+    text-align: left;
 }
 
 .content {
@@ -33,7 +33,6 @@
     font-family: var(--font-roboto);
     margin-bottom: 52px;
     padding-right: 100px;
-    padding-left: 100px;
 }
 
 .contact {
@@ -47,6 +46,12 @@
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.25); 
 } 
 
+.contact:hover {
+    color: var(--color-primary);
+    background: var(--color-text);
+} 
+
+
 .heroImg {
     width: 50%;
     height: 50%;
@@ -57,10 +62,9 @@
     animation-timing-function: ease-in-out;
     border-radius: 40%;
     width: 25%;
-    max-width: 350px;
-    max-height: 400px;
-    margin-left: 20px
-
+    min-width: 250px;
+    margin-left: 20px;
+    margin-bottom: 10%;
 }
 
 @keyframes floating {
