--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -34,6 +34,11 @@
     text-decoration: none;
 }
 
+.menuItems a:hover {
+    color: var(--color-primary);
+}
+
+
 .menuBtn {
     display: none
 }
