--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -72,11 +72,11 @@
 .link {
     text-decoration: none;
     color: var(--color-text);
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
     border-radius: 100px;
     background: var(--color-primary);
-    padding: 1px 22px;
+    padding: 12px 22px;
     transition: 0.5s;
 }
 
@@ -98,7 +98,6 @@
 
 @media screen and (max-width: 830px) {
     .container {
-        /* max-width: 350px; */
         height: auto;
     }
     
