--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -12,6 +12,7 @@
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .projects {
@@ -25,8 +26,3 @@
     width: 100%;
 }
 
-@media screen and (max-width: 830px) {
-.title {
-    text-align: center;
-}
-}
